# gegevensbijbesluiten.overheid.nl

./: README.md
inzage-cms/backend/: .coveragerc  .env.example  Makefile  Opensource.Dockerfile  launch_debug.py  pyproject.toml  pytest.ini  start.sh
inzage-cms/backend/alembic/: alembic.ini  env.py
inzage-cms/backend/alembic/versions/: 039b1c30b48f_added_toelichting_field_and_swapped_.py  0836fc8fa349_generate_oe_upc.py  0a03d9a9aa0f_changed_conditie_from_evtp_gst_to_gst.py  0b095f0dc494_adjusted_ibron_table.py  0e02e925efeb_single_gg_parent.py  1dbb4d5044ed_add_new_table_for_communication_type_in_.py  2b4d3fdd2da6_add_fts_functionality.py  364cc98491ea_splitted_gst_gg_rge_to_gst_gg_and_gst_.py  41541fdd0c28_add_columns_and_delete_deprecated_.py  41c9428be963_add_new_table_subjects.py  4707766c4c6e_delete_oe_struct.py  4d3b495ccce3_add_sortering_into_gst_gg_rge_db.py  5373d4030cf2_removed_unused_tables_added_metadata_.py  6887445da1f5_generate_gg_upc.py  73e46ebb4295_delete_e_contact_column.py  74062a029409_added_uri.py  7a032cd9759b_align_sqlalchemy_with_db.py  8c43eb7d0ccd_not_required_volg_nr.py  8fdcf5c0da84_removed_columns_from_oe.py  962fd6ab7f10_first_setup_inzage_db.py  96858896134e_types_in_oe.py  b10f6f454773_versie_nr_multiple.py  b6abf93b9c81_mandatory_description.py  be5a4e2196e5_added_for_oe_struct_koepel_and_deleted_.py  c90d8823bbf8_version_management.py  cfe63fc75179_additional_information.py  e061c5d0b42d_added_foreign_keys_to_evtp_table.py  e4d56dca11fa_set_up_reliable_data.py  ea59c84f381b_deleted_evtp_cd_sup.py  f0b292ced71a_add_organisatie_omgeving.py  f44ff3a38f3f_add_gg_evtp_sort_table.py
inzage-cms/backend/app/: app_factory.py  main.py  pytest.ini
inzage-cms/backend/app/api/: api.py  dependencies.py  exceptions.py
inzage-cms/backend/app/config/: __init__.py  resource.py  wiegebruiktmijngegevens-nl-chain.pem
inzage-cms/backend/app/core/: config.py  keycloak.py
inzage-cms/backend/app/crud/: __init__.py  _default_crud_operations.py  evtp_acc.py  evtp_version.py  gg.py  pod_env.py  struct.py  table.py
inzage-cms/backend/app/database/: database.py
inzage-cms/backend/app/models/: __init__.py  _default_columns.py  evtp.py  evtp_acc.py  gg.py  gst.py  ibron.py  oe.py  ond.py  rge.py
inzage-cms/backend/app/rules/: _superrule.py  applyRules.py  rule0.py  rule1.py  rule2.py  rule3.py  rule4.py  rule5.py  rule6.py  rule7.py  rule8.py  rule9.py
inzage-cms/backend/app/schemas/: __init__.py  evtp_acc.py  evtp_gst.py  evtp_oe_com_type.py  evtp_ond.py  evtp_tree_structure.py  evtp_version.py  gebruiker.py  gg.py  gg_evtp_sort.py  gg_struct.py  gst.py  gst_gg.py  gst_gstt.py  gst_rge.py  gst_type.py  ibron.py  oe.py  oe_com_type.py  oe_koepel.py  oe_koepel_oe.py  oe_struct.py  omg.py  ond.py  rge.py  rules.py  table.py
inzage-cms/backend/app/util/: misc.py
inzage-cms/backend/tests/: conftest.py
inzage-cms/backend/tests/integration/: test_evtp_version.py  test_generic_endpoints.py  test_validator.py
inzage-cms/backend/tests/samples/: test_db.py  test_validator.py
vernieuwing-inzage-overzicht/backend/: .coveragerc  .env.example  Makefile  Opensource.Dockerfile  pyproject.toml  pytest.ini  start.sh
vernieuwing-inzage-overzicht/backend/app/: app_factory.py  logging.conf  main.py  preditor.py  requirements.txt
vernieuwing-inzage-overzicht/backend/common/: database_url.py
vernieuwing-inzage-overzicht/backend/tests/: conftest.py
(+275 files in other folders)
